feat(runtime): 支持 agent 自动注册
